--- a/backend-deployment.yaml
+++ b/backend-deployment.yaml
@@ -52,7 +52,7 @@ spec:
             - name: EMAIL_PWD
               value: "Ima@360!"
             - name: RELEASE_SERVER
-              value: "https://gcp.ima360.app"
+              value: "http://34.134.26.103:8080/v1/api"
           resources:
             limits:
               memory: "128Mi"
