--- a/newchanges/backend-deployment.yaml
+++ b/newchanges/backend-deployment.yaml
@@ -19,7 +19,7 @@ spec:
         - name: regcred
       containers:
         - name: backend
-          image: anmaroav/ima360-golang:latest
+          image: anmaroav/ima360-golang:release-v1.2
           imagePullPolicy: Always
           env:
             - name: DB_HOST
