--- a/newchanges/backend-deployment.yaml
+++ b/newchanges/backend-deployment.yaml
@@ -53,7 +53,7 @@ spec:
             - name: EMAIL_PWD
               value: "Ima@360!"
             - name: DB_HOST_ENV
-              value: "CLOUDSQL"
+              value: ""
             - name: CLOUDSQL_INSTANCE_ID
               value: "ima360:us-central1:gcp"
             - name: RELEASE_SERVER
