--- a/newchanges/backend-deployment.yaml
+++ b/newchanges/backend-deployment.yaml
@@ -17,7 +17,7 @@ spec:
         - name: regcred
       containers:
         - name: backend
-          image: anmaroav/ima360-golang:release-v1.2
+          image: anmaroav/ima360-golang:release-v1.3
           imagePullPolicy: Always
           env:
             - name: DB_HOST
@@ -53,7 +53,7 @@ spec:
             - name: EMAIL_PWD
               value: "Ima@360!"
             - name: DB_HOST_ENV
-              value: ""
+              value: "cloudsql"
             - name: CLOUDSQL_INSTANCE_ID
               value: "ima360:us-central1:gcp"
             - name: RELEASE_SERVER
